# Python_Interface_Cpp

./: .gitignore  LICENSE  Pipfile  Prerequisites.md  Python_Integration_with_C_C++.odp  README.md
cffi/: Readme.md  build_c_dynamic_lib.sh  fibonacci.c  test_cffi.py
cython/integrate/: .gitignore  Readme.md  cyintegrate.pyx  cython_speedup.py  integrate.py  setup.py
cython/optimize_python/: .gitignore  Readme.md  cython_speedup.py  fib.c  fib.html  fib.pyx  fib_cython.py  setup.py
cython/wrap_arrays/: .gitignore  Readme.md  build_cython.sh  cfastlz.pxd  cyfastlz.pyx  fastlz.c  fastlz.h  run_test.sh  setup.py  test_cython_wrapper.py
cython/wrap_c/: .gitignore  Readme.md  build_cython.sh  cfib.pxd  cyfib.pyx  cython_wrapper_speedup.py  setup.py  test_cython_wrapper.py
pybind11/: .gitignore  Readme.md  build_pybind11.sh  fibonacci.cpp  fibonacci.h  test_pybind11.py
swig/: extconf.rb  fib_python.py  fibonacci.h  setup.py  test_swig.py
swig/callback/: Readme.md  example.h  example.i  runme.py
swig/fastlz/: .gitignore  Compress.cpp  Compress.h  Compress.i  Readme.md  build_fastlz_lib.sh  fastlz.h  fastlz.i  setup.py  test_swig.py
swig/fibonacci/: .gitignore  CMakeLists.txt  Readme.md  build_swig_ruby_wrapper.sh  fibonacci.c  fibonacci.i  test_swig.rb
swig/logger/: .gitignore  Readme.md  build_swig.sh  example.cpp  example.h  runme.py  setup.py
swig/structs/: Readme.md  build_c.sh  clean.sh  fib_python.py  fibonacci.c  fibonacci.h  fibonacci.i  test_swig.py
